styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Gill Sans Extrabold", sans-serif;
  letter-spacing: 0.15em;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.sidebar {
  position: absolute;
  left: -800px;
  top: 0;
  height: 100%;
  width: 83%;
  -webkit-animation: slide 0.3s forwards;
  -webkit-animation-delay: 0.3s;
  animation: slide 0.25s forwards;
  animation-delay: 0.25s;
}


@-webkit-keyframes slide {
  100% { left: 0; }
}

@keyframes slide {
  100% { left: 0; }
}


.fadein{
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 1s; /* Firefox < 16 */
   -ms-animation: fadein 1s; /* Internet Explorer */
    -o-animation: fadein 1s; /* Opera < 12.1 */
       animation: fadein 1s;
}

@keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
from { opacity: 0; }
to   { opacity: 1; }
}

/* react calendar */
.react-calendar{
  width: 100% !important;
  margin: 0 0.75rem !important;
  border-radius: 0.5rem !important;
  background: black !important;
  color: white !important;
  font-weight: bold !important;
}

/* month label on calendar */
.react-calendar .react-calendar__navigation__label__labelText{
  font-size: 1.5rem !important;
  font-weight: bold !important;
  color: white !important;
}

/* month label on hover calendar */
.react-calendar button:hover{
  border-radius: .25rem !important;
}

/* Neighboring month on calendar */
.react-calendar .react-calendar__month-view__days__day--neighboringMonth{
  color: white !important;
  opacity: 0.45 !important;
}

/* weekends on calendar */
.react-calendar .react-calendar__month-view__days__day--weekend{
  color: hotpink !important;
  border-radius: .25rem !important;
}

/* hovering over a day */
.react-calendar .react-calendar__tile:enabled:hover{
  border-radius: .25rem !important;
}

/* active day on calendar */
.react-calendar .react-calendar__tile--active{
  background: hotpink !important;
  border-radius: .25rem !important;
  color: white !important;
}

/* weekday labels on calendar */
.react-calendar .react-calendar__month-view__weekdays__weekday abbr{
  font-size: .85rem !important;
  text-decoration: none !important;
  font-weight: bold !important;
  color: white !important;
}

